# LGAD-testing

./: CMakeLists.txt  MyVoxelizedElectricField.cc  MyVoxelizedElectricField.hh  README.md  action.cc  action.hh  construction.hh  constrution.cc  detector.cc  detector.hh  generator.cc  physics.cc  physics.hh  sim.cc
